--- a/src/css/style.css
+++ b/src/css/style.css
@@ -489,24 +489,25 @@ div.fc-ab-root {
     display: none;
 }
 
-.next-icon{
+.next-icon {
     position: relative;
     top: 2px;
 }
 
-.gutter-row{
+.gutter-row {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     /* border-radius: 15px; */
-} 
-.ant-card-body{    
+}
+
+.ant-card-body {
     /* background-color: aliceblue; */
 }
 
-.ant-tabs{
+.ant-tabs {
     background-color: floralwhite;
 }
 
-.step-btn-group{    
+.step-btn-group {
     position: relative;
     top: 35vh;
     left: 50%;
@@ -514,75 +515,85 @@ div.fc-ab-root {
     max-width: 300px;
 }
 
-.nav-search, .curr-user{
+.nav-search,
+.curr-user {
     display: inline-block;
 }
-.curr-user .user-info, .curr-user button {
+
+.curr-user .user-info,
+.curr-user button {
     display: inline-block;
 }
-.nav-content{
+
+.nav-content {
     width: 100%;
     text-align: right;
 }
 
-.user-info span{
+.user-info span {
     padding-left: "10px";
 }
 
-.mobile-nav{
+.mobile-nav {
     padding: 13px 20px;
     width: 100%;
     text-align: right;
 }
 
 @media screen and (min-width: 769px) {
-    .nav-content{
+    .nav-content {
         display: block;
     }
-    .mobile-nav{
+
+    .mobile-nav {
         display: none;
     }
 }
+
 @media screen and (max-width: 768px) {
-    .nav-content{
+    .nav-content {
         display: none;
     }
-    .mobile-nav{
+
+    .mobile-nav {
         display: block;
     }
 }
 
 
-.logo-nav, .nav-content{
+.logo-nav,
+.nav-content {
     background-color: azure;
 }
 
-.adsense-bar{
+.adsense-bar {
     background-color: gray;
 }
 
-.adsense-bar img{
+.adsense-bar img {
     height: 200px;
     /* padding-left: 20%; */
 }
 
-.nav-item-button{
+.nav-item-button {
     border: none;
     background-color: azure;
     height: 58px;
 }
-.nav-item-button:hover, 
-.nav-item-button:focus{
+
+.nav-item-button:hover,
+.nav-item-button:focus {
     background-color: #1890ff;
     border: none;
     color: #fff;
 }
-.user-card{
+
+.user-card {
     position: absolute;
     bottom: 2px;
 }
 
-.free-access-btn{
+.free-access-btn {
     background-color: #ffc107;
     border: none;
     padding: 10px;
@@ -590,42 +601,59 @@ div.fc-ab-root {
 }
 
 
-.ant-tabs-nav .ant-tabs-tab-active{
+.ant-tabs-nav .ant-tabs-tab-active {
     color: red;
 }
-.side-adsense{
+
+.side-adsense {
     margin-top: 20px;
     min-height: 300px;
     background-color: grey;
 }
-.side-adsense img{
+
+.side-adsense img {
     padding-top: 20px;
 }
-#g-recaptcha{
+
+#g-recaptcha {
     border: 1px solid #1a73e8;
     border-top: 9px solid #1a73e8;
     width: 304px;
     height: 86px;
 }
 
-.news-img{
-    display: inline-block;
+.news-img {
     width: 40%;
     height: 90px;
     background-size: cover;
 }
-.news-cnt{
-    display: inline-block;
+
+.news-cnt {
     width: 59%;
     position: absolute;
     top: 25px;
+    right: 0;
     padding: 7px;
+    display: -webkit-box;         /* For WebKit-based browsers */
+    -webkit-line-clamp: 2;        /* Limit the number of lines to 2 */
+    -webkit-box-orient: vertical; /* Set the box orientation to vertical */  
+    overflow: hidden;              /* Hide overflowing content */
+    text-overflow: ellipsis;       /* Display ellipsis for overflowed content */
 }
-.news-item{
+
+.news-cnt h5 {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+}
+
+.news-item {
     height: 90px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
-.main-title{
+
+.main-title {
     padding: 10px 0px;
     cursor: pointer;
 }
